<resources>
    <string name="app_name">长江商务</string>
    <string name="empty"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="login_hint_email_or_phone">注册的手机号码</string>
  <string name="login_hint_password">账号对应的密码</string>
  <string name="register_have_account">已有账号？</string>
  <string name="register_have_account_to_login">立即登录</string>
  <!-- 注册页 -->
  <string name="hint_email">邮箱地址</string>
  <string name="hint_phone">输入手机号</string>
  <string name="hint_name">姓名（最多为10位字符）</string>
  <string name="remark_name">推荐人手机号</string>
  <string name="hint_password">请输入6-20位密码</string>
  <string name="hint_repeat_password">请重复输入密码</string>
  <string name="hint_captcha">验证码</string>
  <string name="next">下一步</string>
  <string name="complete">完成</string>
  <string name="repeat">重新发送</string>
  <string name="hint_tuiguang">推广码(选填)</string>
  <string name="register_to_login">注册并登录</string>
  <!-- 购买popup-->
  <string name="point_fist">3</string>
  <string name="point_second">4</string>
  <string name="point_third">6</string>

  <string name="money_fist">10</string>
  <string name="money_second">50</string>
  <string name="money_third">100</string>
  <string name="money_fourth">500</string>
  <string name="money_fifth">1000</string>
  <!--晚上信息-->
  <string name="user_info_wx">微信号</string>
  <string name="user_info_aili">支付宝</string>
  <string name="user_info_card">银行卡</string>
</resources>
