<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  android:id="@+id/login_register"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/bgGray">
    <ImageView
      android:id="@+id/toolbar_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:paddingBottom="12dp"
      android:paddingLeft="7dp"
      android:paddingRight="12dp"
      android:paddingTop="12dp"
      android:src="@drawable/btn_white_back"/>
<ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
           >
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="20dp"
      >
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@drawable/login_input_bg"
      android:paddingBottom="8dp"
      android:paddingTop="8dp" >

        <!-- 邮箱 -->
        <com.ihaveu.bc.widget.DEditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="37dp"
          app:d_hint="@string/hint_phone"
          app:d_background="@color/white"
          app:d_inputType="number"
          app:d_phone='true'>
        </com.ihaveu.bc.widget.DEditText>
        <View
          style="@style/Style_grayebebec_line"
          android:layout_marginLeft="13dp"
          android:layout_marginRight="13dp"/>
        <!-- 姓名 -->
        <com.ihaveu.bc.widget.DEditText
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:layout_height="37dp"
          app:d_background="@color/white"
          app:d_hint="@string/hint_name"
          app:maxLength="20">
        </com.ihaveu.bc.widget.DEditText>
        <View
          style="@style/Style_grayebebec_line"
          android:layout_marginLeft="13dp"
          android:layout_marginRight="13dp"/>
        <!-- 密码 -->
        <com.ihaveu.bc.widget.DEditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="37dp"
          app:d_background="@color/white"
          app:d_hint="@string/hint_password"
          app:maxLength="20"
          app:d_password="true">
        </com.ihaveu.bc.widget.DEditText>
        <View
          style="@style/Style_grayebebec_line"
          android:layout_marginLeft="13dp"
          android:layout_marginRight="13dp"/>
        <!-- 重复密码 -->
        <com.ihaveu.bc.widget.DEditText
          android:id="@+id/repeat_password"
          android:layout_width="match_parent"
          android:layout_height="37dp"
          app:d_background="@color/white"
          app:d_hint="@string/hint_repeat_password"
          app:maxLength="20"
          app:d_password="true">
        </com.ihaveu.bc.widget.DEditText>
        <!-- 验证码 -->

        <LinearLayout
          android:id="@+id/captcha_layout"
          android:layout_width="match_parent"
          android:layout_height="@dimen/register_edittext_height"
          android:gravity="bottom"
          android:orientation="horizontal"
          android:visibility="gone" >
            <com.ihaveu.bc.widget.DEditText
              android:id="@+id/captcha"
              android:layout_width="220dp"
              android:layout_height="wrap_content"
              app:d_hint="@string/hint_captcha"
              app:d_background="@color/white"
              app:d_inputType="number"></com.ihaveu.bc.widget.DEditText>
            <ImageView
              android:id="@+id/captcha_image"
              android:layout_width="80dp"
              android:layout_height="@dimen/register_captcha_image_height"
              android:layout_marginLeft="@dimen/screen_3_percent"
              android:scaleType="fitXY"
              />
        </LinearLayout>
        </LinearLayout>
        <!-- 注册按钮 -->
        <Button
          android:id="@+id/register_button"
          android:layout_marginTop="20dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/cheng"
          android:gravity="center"
          android:text="注册"
          android:textColor="@color/white"/>

        <!-- 文字提示 -->
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center"
          android:layout_marginTop="14dp">
            <com.ihaveu.bc.widget.DTextView
              android:textSize="16dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/register_have_account"
              android:textColor="#ffafafaf"/>
            <RelativeLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_vertical"
              android:layout_marginTop="1dp">
                <com.ihaveu.bc.widget.DTextView
                  android:id="@+id/go_login"
                  android:textSize="16dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/register_have_account_to_login"/>
                <View
                  android:layout_below="@+id/go_login"
                  android:layout_alignLeft="@+id/go_login"
                  android:layout_alignRight="@+id/go_login"
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="#000000"
                  android:layout_marginTop="2dp"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
</RelativeLayout>